Explained project in README and created a img folder for the screenshot and changed index.html to display the output in the dom instead of the console

--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
     <title>Employees</title>
 </head>
 <body>
+    <div id="output"></div>
 
+    <script src="https://code.jquery.com/jquery-3.1.1.js" integrity="sha256-16cdPddA6VdVInumRGo6IbivbERE8p7CQR3HzTBuELA=" crossorigin="anonymous"></script>
     <script src="/javascript/prototype.js" type="text/javascript" charset="utf-8"></script>
     <script src="//localhost:35729/livereload.js"></script>
 </body>
